recipes/static/scss/_common.scss
* {
    box-sizing: border-box;
}

::selection {
    background-color: rgba($colour_accent, 0.2);
}

body {
    font-family: $font-family;
    font-size: 20px;
    color: $colour_main;
    // background-color: $colour_bright;
    margin: 0;
}

a,
a:visited {
    text-decoration: underline;
    text-decoration-color: $colour_accent;
    text-decoration-thickness: 2px;
    text-underline-offset: 1px;
    color: $colour_main;
    transition: background-color 0.2s linear;

    &.no-border {
        border-bottom: none;
    }
}

a:h§ {
    background-color: rgba($colour_accent, 0.2);
}

ul {
    list-style-type: "›   ";
}

ol li {
    margin-bottom: 3em;
    list-style-position: inside;
}

li::marker {
    color: $colour_main_transprent;
    font-weight: bold;
}
img {
    max-width: 100%;
    height: auto;
}

.no-overflow {
    overflow: hidden !important;
}

.opacity-50 {
    opacity: 0.5 !important;
}

